--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "firebase-admin": "^10.0.1",
+    "mobx": "^6.3.12",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2"
   },
   "devDependencies": {
+    "@types/gapi": "^0.0.41",
     "@types/react": "^17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
