--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "firebase-admin": "^10.0.1",
+    "google-auth-library": "^7.11.0",
+    "googleapis": "^92.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mobx": "^6.3.12",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -17,6 +20,7 @@
   },
   "devDependencies": {
     "@types/gapi": "^0.0.41",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/react": "^17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
